--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -2,6 +2,7 @@ collections:
   initiatives:
     output: true
     order:
+      - Covid 19/Economic and Social Support.md
       - Covid 19/Flow of Verified Information.md
       - Covid 19/Community Preparedness.md
       - Covid 19/Digital Contact Tracing.md
