{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"19"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -59,7 +59,7 @@ collections:
       - Strategic National Projects/.keep
       - Strategic National Projects/E Payments.md
       - Covid 19/.keep
-      - Covid 19/Responding to COVID 19 With Tech.md
+      - Covid 19/Responding to COVID 19 with Tech.md
       - Covid 19/Digital Contact Tracing.md
       - Covid 19/Economic and Social Support.md
       - Covid 19/Flow of Verified Information.md
