--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -32,6 +32,7 @@ collections:
       - Digital Government Services/Parents Gateway.md
       - Digital Government Services/SG Translate Together.md
       - Digital Government Services/SG Govt Developer Portal.md
+      - Health/Project Pensieve.md
       - Health/.keep
       - Health/Smart Health Initiatives.md
       - Health/Assistive Technology and Robotics In Healthcare.md
