--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -39,6 +39,7 @@ collections:
       - Health/National Steps Challenge™ & Healthy 365 App.md
       - Health/Project Pensieve.md
       - Health/Telehealth.md
+      - Safe Digital Space/ScamShield.md
       - Safe Digital Space/CheckWho.md
       - Safe Digital Space/Building Trust and Safety.md
       - Safe Digital Space/.keep
