{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"19"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -24,4 +24,4 @@ collections:
       - About Us/About SNDGG.md
       - About Us/Our Vision and Mission.md
       - About Us/SNDGG Ministerial Committee.md
-      - About Us/SNDGO Senior Leaders.md
+      - About Us/SNDGO Senior Management.md
