{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"19"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -33,6 +33,7 @@ collections:
       - Digital Government Services/Parents Gateway.md
       - Digital Government Services/SG Translate Together.md
       - Digital Government Services/SG Govt Developer Portal.md
+      - Health/Singapore Eye Lesion Analyser.md
       - Health/.keep
       - Health/Smart Health Initiatives.md
       - Health/Assistive Technology and Robotics In Healthcare.md
