--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -23,5 +23,5 @@ collections:
       - About Us/.keep
       - About Us/About Smart Nation group.md
       - About Us/Our Vision and Mission.md
-      - About Us/Smart Nation group Ministerial Committee.md
+      - About Us/Smart Nation Group Ministerial Committee.md
       - About Us/SNDGO Senior Management.md
