{"message":"Update file: collection.yml","userId":"2652","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -21,7 +21,7 @@ collections:
       - A Secure Smart Nation/Report Data Incident.md
       - A Secure Smart Nation/FAQs on Reporting Data Incidents.md
       - About Us/.keep
-      - About Us/About Smart Nation group.md
+      - About Us/About Smart Nation Group.md
       - About Us/Our Vision and Mission.md
       - About Us/Smart Nation Group Ministerial Committee.md
       - About Us/SNDGO Senior Management.md
