--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -24,4 +24,4 @@ collections:
       - About Us/About Smart Nation Group.md
       - About Us/Our Vision and Mission.md
       - About Us/Smart Nation Group Ministerial Committee.md
-      - About Us/SNDGO Senior Management.md
+      - About Us/Smart Nation Group Senior Management.md
