{"message":"Update file: collection.yml","userId":"2652","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -24,4 +24,4 @@ collections:
       - About Us/About Smart Nation Group.md
       - About Us/Our Vision and Mission.md
       - About Us/SNDGG Ministerial Committee.md
-      - About Us/Smart Nation Group Senior Management.md
+      - About Us/SNDGG Senior Management.md
