--- a/_community/collection.yml
+++ b/_community/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Showcases/CityScape.md
       - Showcases/PlayScape.md
       - Showcases/Smart Nation Builder.md
+      - Events/Smart Nation Grandparents Day.md
       - Events/.keep
       - Events/Smart Nation Events.md
       - Events/Smart Nation & U.md
