--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -23,5 +23,5 @@ collections:
       - About Us/.keep
       - About Us/About Smart Nation Group.md
       - About Us/Our Vision and Mission.md
-      - About Us/SNDGG Ministerial Committee.md
+      - About Us/SNG Ministerial Committee.md
       - About Us/SNG Senior Management.md
