--- a/_singapore-conference-on-ai/collection.yml
+++ b/_singapore-conference-on-ai/collection.yml
@@ -2,4 +2,5 @@ collections:
   singapore-conference-on-ai:
     output: true
     order:
+      - SCAI Participants.md
       - Singapore Conference on AI.md
