{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_singapore-conference-on-ai/collection.yml
+++ b/_singapore-conference-on-ai/collection.yml
@@ -2,5 +2,6 @@ collections:
   singapore-conference-on-ai:
     output: true
     order:
+      - Programme.md
       - Singapore Conference on AI.md
       - SCAI Participants.md
