{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_singapore-conference-on-ai/collection.yml
+++ b/_singapore-conference-on-ai/collection.yml
@@ -3,5 +3,5 @@ collections:
     output: true
     order:
       - Singapore Conference on AI.md
-      - SCAI Participants.md
+      - Participants.md
       - Programme.md
