{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_singapore-conference-on-ai/collection.yml
+++ b/_singapore-conference-on-ai/collection.yml
@@ -2,6 +2,6 @@ collections:
   singapore-conference-on-ai:
     output: true
     order:
-      - Singapore Conference on AI.md
+      - About.md
       - Participants.md
       - Programme.md
