--- a/_singapore-conference-on-ai/collection.yml
+++ b/_singapore-conference-on-ai/collection.yml
@@ -2,6 +2,7 @@ collections:
   singapore-conference-on-ai:
     output: true
     order:
+      - Gallery.md
       - About.md
       - Participants.md
       - Programme.md
