--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -13,6 +13,7 @@ collections:
       - Strategic National Projects/Smart Nation Sensor Platform.md
       - Strategic National Projects/Smart Urban Mobility.md
       - Strategic National Projects/E Payments.md
+      - National AI Strategy/National AI Strategy.md
       - National AI Strategy/.keep
       - National AI Strategy.md
       - Business & Finance/.keep
