--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -15,7 +15,7 @@ collections:
       - Strategic National Projects/E Payments.md
       - National AI Strategy/.keep
       - National AI Strategy/NAIS.md
-      - National AI Strategy/Support our AI Journey.md
+      - National AI Strategy/Be part of our AI Journey.md
       - Business & Finance/.keep
       - Business & Finance/Business & Finance Initiatives.md
       - Business & Finance/Corppass.md
