{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -14,7 +14,7 @@ collections:
       - Strategic National Projects/Smart Urban Mobility.md
       - Strategic National Projects/E Payments.md
       - National AI Strategy/.keep
-      - National AI Strategy/NAIS.md
+      - National AI Strategy/National AI Strategy.md
       - National AI Strategy/Be part of our AI Journey.md
       - Business & Finance/.keep
       - Business & Finance/Business & Finance Initiatives.md
