--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -13,9 +13,9 @@ collections:
       - Strategic National Projects/Smart Nation Sensor Platform.md
       - Strategic National Projects/Smart Urban Mobility.md
       - Strategic National Projects/E Payments.md
-      - National AI Strategy/.keep
-      - National AI Strategy/National AI Strategy.md
-      - National AI Strategy/Be part of our AI Journey.md
+      - Artificial Intelligence/.keep
+      - Artificial Intelligence/National AI Strategy.md
+      - Artificial Intelligence/Be part of our AI Journey.md
       - Business & Finance/.keep
       - Business & Finance/Business & Finance Initiatives.md
       - Business & Finance/Corppass.md
