{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_sna-learning-portal/collection.yml
+++ b/_sna-learning-portal/collection.yml
@@ -2,5 +2,6 @@ collections:
   sna-learning-portal:
     output: true
     order:
+      - Module 2.md
       - SNA Learning Portal.md
       - Module 1.md
