--- a/_sna-learning-portal/collection.yml
+++ b/_sna-learning-portal/collection.yml
@@ -2,6 +2,7 @@ collections:
   sna-learning-portal:
     output: true
     order:
+      - Module 3.md
       - Module 2.md
       - SNA Learning Portal.md
       - Module 1.md
