--- a/_sna-learning-portal/collection.yml
+++ b/_sna-learning-portal/collection.yml
@@ -2,6 +2,7 @@ collections:
   sna-learning-portal:
     output: true
     order:
+      - Module 5.md
       - Module 4.md
       - Module 3.md
       - Module 2.md
