--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -24,6 +24,7 @@ collections:
       - Business & Finance/Networked Trade Platform.md
       - Business & Finance/SGFinDex.md
       - Business & Finance/SGTraDex.md
+      - Digital Government Services/Pair.md
       - Digital Government Services/.keep
       - Digital Government Services/Our Digital Government Services.md
       - Digital Government Services/CentEx.md
