{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_resources/collection.yml
+++ b/_resources/collection.yml
@@ -3,6 +3,6 @@ collections:
     output: true
     order:
       - Resources for residents.md
-      - Business Resources.md
+      - Resources for Businesses.md
       - Data Resources & APIs.md
       - Resources for Developers.md
