{"message":"Update file: _config.yml","userId":"19","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -56,5 +56,5 @@ is_government: true
 shareicon: /images/og-image/smart-nation-og-image.jpg
 google_analytics: UA-77555444-1
 facebook-pixel: ""
-google_analytics_ga4: ""
+google_analytics_ga4: G-C3GYHSR0CW
 linkedin-insights: ""
