{"message":"Update file: footer.yml","userId":"19","fileName":"footer.yml"}

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
 contact_us: /contact-us/
-show_reach: true
+show_reach: false
 feedback: https://form.gov.sg/5d6cbb7d2efdae001258109a
 copyright_agency: Smart Nation and Digital Government Office
 social_media:
