{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -21,6 +21,7 @@ collections:
       - Business & Finance/Networked Trade Platform.md
       - Business & Finance/SGFinDex.md
       - Business & Finance/SGTraDex.md
+      - Digital Government Services/LifeSG.md
       - Digital Government Services/.keep
       - Digital Government Services/Our Digital Government Services.md
       - Digital Government Services/CentEx.md
