--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -20,6 +20,7 @@ collections:
       - Business & Finance/Networked Trade Platform.md
       - Business & Finance/SGFinDex.md
       - Business & Finance/SGTraDex.md
+      - Digital Government Services/National Digital Identity.md
       - Digital Government Services/LifeSG.md
       - Digital Government Services/.keep
       - Digital Government Services/Our Digital Government Services.md
