{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -46,6 +46,7 @@ collections:
       - Transport/Contactless Fare Payment For Public Transport.md
       - Transport/On Demand Shuttle.md
       - Transport/Open Data & Analytics For Urban Transportation.md
+      - Urban Living/Personal Alert Button.md
       - Urban Living/.keep
       - Urban Living/Smart Urban Initiatives.md
       - Urban Living/Dengue Hotspots Survey Drones.md
