{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -58,7 +58,7 @@ collections:
       - Urban Living/OneService Chatbot.md
       - Urban Living/Personal Alert Button.md
       - Urban Living/Punggol Smart Town.md
-      - Urban Living/Smart Towns.md
+      - Urban Living/HDB Smart Towns.md
       - Urban Living/Smart Water Meter.md
       - Urban Living/Smart Urban Planning.md
       - Covid 19/.keep
