{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_a-secure-smart-nation/collection.yml
+++ b/_a-secure-smart-nation/collection.yml
@@ -1,4 +1,5 @@
 collections:
   a-secure-smart-nation:
     output: true
-    order: []
+    order:
+      - Protecting Data & Safeguarding Systems.md
