{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_a-secure-smart-nation/collection.yml
+++ b/_a-secure-smart-nation/collection.yml
@@ -2,4 +2,5 @@ collections:
   a-secure-smart-nation:
     output: true
     order:
+      - Cybersecurity in the Public Sector.md
       - Protecting Data & Safeguarding Systems.md
