{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_a-secure-smart-nation/collection.yml
+++ b/_a-secure-smart-nation/collection.yml
@@ -2,5 +2,6 @@ collections:
   a-secure-smart-nation:
     output: true
     order:
+      - Government's Personal Data Protection Laws And Policies.md
       - Cybersecurity in the Public Sector.md
       - Protecting Data & Safeguarding Systems.md
