--- a/_a-secure-smart-nation/collection.yml
+++ b/_a-secure-smart-nation/collection.yml
@@ -2,6 +2,7 @@ collections:
   a-secure-smart-nation:
     output: true
     order:
+      - Government's Personal Data Protection Initiatives.md
       - Government's Personal Data Protection Laws And Policies.md
       - Cybersecurity in the Public Sector.md
       - Protecting Data & Safeguarding Systems.md
