--- a/_a-secure-smart-nation/collection.yml
+++ b/_a-secure-smart-nation/collection.yml
@@ -2,6 +2,7 @@ collections:
   a-secure-smart-nation:
     output: true
     order:
+      - FAQs on Reporting Data Incidents.md
       - Report Data Incident.md
       - Government's Personal Data Protection Initiatives.md
       - Government's Personal Data Protection Laws And Policies.md
