{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Transforming SG Through Tech.md
-      - Example Title.md
+      - Enabling a Culture of Innovation and Experimentation.md
       - Our Key Pillars/.keep
       - Our Key Pillars/Pillars of a Smart Nation .md
       - Our Key Pillars/Digital Society.md
