{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_archive/collection.yml
+++ b/_archive/collection.yml
@@ -2,5 +2,6 @@ collections:
   archive:
     output: true
     order:
+      - SNDGG Ministerial Committee.md
       - Our Vision and Mission.md
       - About Smart Nation Group.md
