--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -3,11 +3,11 @@ collections:
     output: true
     order:
       - Transforming SG Through Tech.md
-      - Our Key Pillars/.keep
-      - Our Key Pillars/Pillars of a Smart Nation .md
-      - Our Key Pillars/Digital Society.md
-      - Our Key Pillars/Digital Economy.md
-      - Our Key Pillars/Digital Government.md
+      - Key Pillars/.keep
+      - Key Pillars/Pillars of a Smart Nation .md
+      - Key Pillars/Digital Society.md
+      - Key Pillars/Digital Economy.md
+      - Key Pillars/Digital Government.md
       - Achievements.md
       - Milestones.md
       - Culture of Innovation.md
