{"message":"Update file: navigation.yml","userId":"19","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,3 +21,5 @@ links:
     resource_room: true
   - title: Resources
     collection: resources
+  - title: A SECURE SMART NATION
+    collection: a-secure-smart-nation
