--- a/_archive/collection.yml
+++ b/_archive/collection.yml
@@ -2,6 +2,7 @@ collections:
   archive:
     output: true
     order:
+      - Join Us.md
       - SNDGG Ministerial Committee.md
       - Our Vision and Mission.md
       - About Smart Nation Group.md
