{"message":"Update file: navigation.yml","userId":"19","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,3 +21,5 @@ links:
         url: /careers/smart-nation-fellowship
       - title: Careers in Gov ICT & SS
         url: https://techcareers.smartnation.gov.sg/
+  - title: Frameworks and Blueprints
+    collection: frameworks-and-blueprints
