--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,15 +8,13 @@ links:
     collection: frameworks-and-blueprints
   - title: A Smart Community
     collection: community
-  - title: A SECURE SMART NATION
+  - title: A Secure Smart Nation
     collection: a-secure-smart-nation
   - title: Resources
     collection: resources
   - title: Careers
     url: /careers/join-sndgo
     sublinks:
-      - title: Join Us
-        url: /careers/join-sndgo
       - title: Smart Nation Scholarship
         url: /careers/smart-nation-scholarship
       - title: Smart Nation Fellowship
