{"message":"Update file: navigation.yml","userId":"19","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ links:
   - title: Resources
     collection: resources
   - title: Careers
-    url: /careers/join-sndgo
+    url: /careers/smart-nation-scholarship/
     sublinks:
       - title: Smart Nation Scholarship
         url: /careers/smart-nation-scholarship
