--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -39,13 +39,13 @@ collections:
       - Safe Digital Space/Building Trust and Safety.md
       - Safe Digital Space/ScamShield.md
       - Safe Digital Space/SMS Sender ID Registry (SSIR).md
-      - Transport/.keep
-      - Transport/Smart Transport Initiatives.md
-      - Transport/Autonomous Vehicles.md
-      - Transport/CETRAN.md
-      - Transport/Contactless Fare Payment For Public Transport.md
-      - Transport/On Demand Shuttle.md
-      - Transport/Open Data & Analytics For Urban Transportation.md
+      - Commuting and Travel/.keep
+      - Commuting and Travel/Smart Transport Initiatives.md
+      - Commuting and Travel/Autonomous Vehicles.md
+      - Commuting and Travel/CETRAN.md
+      - Commuting and Travel/Contactless Fare Payment For Public Transport.md
+      - Commuting and Travel/On Demand Shuttle.md
+      - Commuting and Travel/Open Data & Analytics For Urban Transportation.md
       - Urban Living/.keep
       - Urban Living/Smart Urban Initiatives.md
       - Urban Living/Dengue Hotspots Survey Drones.md
