{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -46,21 +46,21 @@ collections:
       - Commuting and Travel/Contactless Fare Payment For Public Transport.md
       - Commuting and Travel/On Demand Shuttle.md
       - Commuting and Travel/Open Data & Analytics For Urban Transportation.md
-      - Urban Living/.keep
-      - Urban Living/Smart Urban Initiatives.md
-      - Urban Living/Dengue Hotspots Survey Drones.md
-      - Urban Living/Drowning Detection System.md
-      - Urban Living/Elderly Monitoring System.md
-      - Urban Living/Electronic Payments.md
-      - Urban Living/HDB Smart Towns.md
-      - Urban Living/Integrated Environmental Modeller.md
-      - Urban Living/myENV App.md
-      - Urban Living/OneService App.md
-      - Urban Living/OneService Chatbot.md
-      - Urban Living/Personal Alert Button.md
-      - Urban Living/Punggol Smart Town.md
-      - Urban Living/Smart Water Meter.md
-      - Urban Living/Smart Urban Planning.md
+      - Sustainable Living/.keep
+      - Sustainable Living/Smart Urban Initiatives.md
+      - Sustainable Living/Dengue Hotspots Survey Drones.md
+      - Sustainable Living/Drowning Detection System.md
+      - Sustainable Living/Elderly Monitoring System.md
+      - Sustainable Living/Electronic Payments.md
+      - Sustainable Living/HDB Smart Towns.md
+      - Sustainable Living/Integrated Environmental Modeller.md
+      - Sustainable Living/myENV App.md
+      - Sustainable Living/OneService App.md
+      - Sustainable Living/OneService Chatbot.md
+      - Sustainable Living/Personal Alert Button.md
+      - Sustainable Living/Punggol Smart Town.md
+      - Sustainable Living/Smart Water Meter.md
+      - Sustainable Living/Smart Urban Planning.md
       - Covid 19/.keep
       - Covid 19/Responding to COVID 19 with Tech.md
       - Covid 19/Digital Contact Tracing.md
