--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -27,14 +27,14 @@ collections:
       - Digital Government Services/Parents Gateway.md
       - Digital Government Services/SG Translate Together.md
       - Digital Government Services/SG Govt Developer Portal.md
-      - Health/.keep
-      - Health/Smart Health Initiatives.md
-      - Health/Assistive Technology and Robotics In Healthcare.md
-      - Health/HealthHub.md
-      - Health/National Steps Challenge™ & Healthy 365 App.md
-      - Health/Project Pensieve.md
-      - Health/Singapore Eye Lesion Analyser.md
-      - Health/Telehealth.md
+      - Healthy Living/.keep
+      - Healthy Living/Smart Health Initiatives.md
+      - Healthy Living/Assistive Technology and Robotics In Healthcare.md
+      - Healthy Living/HealthHub.md
+      - Healthy Living/National Steps Challenge™ & Healthy 365 App.md
+      - Healthy Living/Project Pensieve.md
+      - Healthy Living/Singapore Eye Lesion Analyser.md
+      - Healthy Living/Telehealth.md
       - Safe Digital Space/.keep
       - Safe Digital Space/Building Trust and Safety.md
       - Safe Digital Space/ScamShield.md
