{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -22,7 +22,7 @@ collections:
       - Commuting and Travel/On Demand Shuttle.md
       - Commuting and Travel/Open Data & Analytics For Urban Transportation.md
       - Digital Government Services/.keep
-      - Digital Government Services/Our Digital Government Services.md
+      - Digital Government Services/Digital Government Services.md
       - Digital Government Services/CentEx.md
       - Digital Government Services/CrowdTaskSG.md
       - Digital Government Services/Digital Birth and Death Certificates.md
