{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -21,19 +21,19 @@ collections:
       - Commuting and Travel/Contactless Fare Payment For Public Transport.md
       - Commuting and Travel/On Demand Shuttle.md
       - Commuting and Travel/Open Data & Analytics For Urban Transportation.md
-      - Digital Government Services/.keep
-      - Digital Government Services/Digital Government Services.md
-      - Digital Government Services/CentEx.md
-      - Digital Government Services/CrowdTaskSG.md
-      - Digital Government Services/Digital Birth and Death Certificates.md
-      - Digital Government Services/HDB Resale Portal.md
-      - Digital Government Services/LifeSG.md
-      - Digital Government Services/Multilingual Digital Services.md
-      - Digital Government Services/National Digital Identity.md
-      - Digital Government Services/OpenCerts.md
-      - Digital Government Services/Parents Gateway.md
-      - Digital Government Services/SG Translate Together.md
-      - Digital Government Services/SG Govt Developer Portal.md
+      - Government Services/.keep
+      - Government Services/Digital Government Services.md
+      - Government Services/CentEx.md
+      - Government Services/CrowdTaskSG.md
+      - Government Services/Digital Birth and Death Certificates.md
+      - Government Services/HDB Resale Portal.md
+      - Government Services/LifeSG.md
+      - Government Services/Multilingual Digital Services.md
+      - Government Services/National Digital Identity.md
+      - Government Services/OpenCerts.md
+      - Government Services/Parents Gateway.md
+      - Government Services/SG Translate Together.md
+      - Government Services/SG Govt Developer Portal.md
       - Healthy Living/.keep
       - Healthy Living/Smart Health Initiatives.md
       - Healthy Living/Assistive Technology and Robotics In Healthcare.md
