{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -42,10 +42,10 @@ collections:
       - Healthy Living/Project Pensieve.md
       - Healthy Living/Singapore Eye Lesion Analyser.md
       - Healthy Living/Telehealth.md
-      - Safe Digital Space/.keep
-      - Safe Digital Space/Building Trust and Safety.md
-      - Safe Digital Space/ScamShield.md
-      - Safe Digital Space/SMS Sender ID Registry (SSIR).md
+      - Safeguarding Citizens/.keep
+      - Safeguarding Citizens/Building Trust and Safety.md
+      - Safeguarding Citizens/ScamShield.md
+      - Safeguarding Citizens/SMS Sender ID Registry (SSIR).md
       - Sustainable Living/.keep
       - Sustainable Living/Smart Urban Initiatives.md
       - Sustainable Living/Dengue Hotspots Survey Drones.md
