{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -29,7 +29,7 @@ collections:
       - Government Services/HDB Resale Portal.md
       - Government Services/LifeSG.md
       - Government Services/Multilingual Digital Services.md
-      - Government Services/National Digital Identity.md
+      - Government Services/Singpass.md
       - Government Services/OpenCerts.md
       - Government Services/Parents Gateway.md
       - Government Services/SG Translate Together.md
