--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Smart Nation Singapore
 url: https://www.smartnation.gov.sg
 favicon: /images/sns-burst.ico
 colors:
-  primary-color: "#e70d2e"
-  secondary-color: "#a6221c"
+  primary-color: "#ed1d3b"
+  secondary-color: "#ff7d01"
   media-colors:
     - title: media-color-one
       color: "#d01c18"
