{"message":"Update file: _config.yml","userId":"19","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Smart Nation Singapore
 url: https://www.smartnation.gov.sg
 favicon: /images/sns-burst.ico
 colors:
-  primary-color: "#ed1d3b"
+  primary-color: "#e81c3a"
   secondary-color: "#ff7d01"
   media-colors:
     - title: media-color-one
