{"message":"Update file: navigation.yml","userId":"19","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/smart-nation-logo.png
+logo: /images/sn_logo.svg
 links:
   - title: About Smart Nation
     collection: about-smart-nation
