--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Smart Nation Singapore
 url: https://www.smartnation.gov.sg
-favicon: /images/sns-burst.ico
+favicon: /images/sn_favicon.svg
 colors:
   primary-color: "#e81c3a"
   secondary-color: "#bb5c01"
