{"message":"Update file: _config.yml","userId":"19","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Smart Nation Singapore
 url: https://www.smartnation.gov.sg
-favicon: /images/sn_favicon.svg
+favicon: /images/snlogo_favicon.svg
 colors:
   primary-color: "#e81c3a"
   secondary-color: "#bb5c01"
