{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Our Vision/.keep
-      - Transforming SG Through Tech.md
+      - Smart Nation.md
       - Key Pillars/.keep
       - Key Pillars/Pillars of a Smart Nation .md
       - Key Pillars/Digital Society.md
