--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -4,11 +4,11 @@ collections:
     order:
       - Our Vision/Smart Nation.md
       - Our Vision/.keep
-      - Key Pillars/.keep
-      - Key Pillars/Pillars of a Smart Nation .md
-      - Key Pillars/Digital Society.md
-      - Key Pillars/Digital Economy.md
-      - Key Pillars/Digital Government.md
+      - Our Goals/.keep
+      - Our Goals/Pillars of a Smart Nation .md
+      - Our Goals/Digital Society.md
+      - Our Goals/Digital Economy.md
+      - Our Goals/Digital Government.md
       - Achievements.md
       - Milestones.md
       - Culture of Innovation.md
