{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -9,6 +9,6 @@ collections:
       - Our Goals/Digital Society.md
       - Our Goals/Digital Economy.md
       - Our Goals/Digital Government.md
-      - Milestones.md
+      - Our Milestones.md
       - Achievements.md
       - Culture of Innovation.md
