{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -10,5 +10,5 @@ collections:
       - Our Goals/Digital Economy.md
       - Our Goals/Digital Government.md
       - Our Milestones.md
-      - Achievements.md
+      - Our Achievements.md
       - Culture of Innovation.md
