{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Our Vision/.keep
-      - Our Vision/Smart Nation.md
+      - Our Vision/The Smart Nation Vision.md
       - Our Vision/Smart Nation 2.md
       - Our Goals/.keep
       - Our Goals/Pillars of a Smart Nation .md
