{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Our Vision/.keep
       - Our Vision/The Smart Nation Vision.md
       - Our Vision/Smart Nation (2024).md
-      - Our Vision/Smart Nation (2014).md
+      - Our Vision/SN 1.md
       - Our Goals/.keep
       - Our Goals/Pillars of a Smart Nation .md
       - Our Goals/Digital Society.md
