{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Our Vision/.keep
       - Our Vision/The Smart Nation Vision.md
-      - Our Vision/Smart Nation (2024).md
+      - Our Vision/SN 2.md
       - Our Vision/SN 1.md
       - Our Goals/.keep
       - Our Goals/Pillars of a Smart Nation .md
