{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Our Vision/SN 1.md
       - Our Goals/.keep
       - Our Goals/Goals of SN2.md
-      - Our Goals/Digital Society.md
+      - Our Goals/Trust.md
       - Our Goals/Digital Economy.md
       - Our Goals/Digital Government.md
       - Our Milestones.md
