{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Our Goals/.keep
       - Our Goals/Goals of SN2.md
       - Our Goals/Trust.md
-      - Our Goals/Digital Economy.md
+      - Our Goals/Growth.md
       - Our Goals/Digital Government.md
       - Our Milestones.md
       - Our Achievements.md
