{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_about-smart-nation/collection.yml
+++ b/_about-smart-nation/collection.yml
@@ -10,6 +10,6 @@ collections:
       - Our Goals/Goals of SN2.md
       - Our Goals/Trust.md
       - Our Goals/Growth.md
-      - Our Goals/Digital Government.md
+      - Our Goals/Community.md
       - Our Milestones.md
       - Our Achievements.md
