--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ links:
     collection: initiatives
   - title: Frameworks and Blueprints
     collection: frameworks-and-blueprints
-  - title: A Smart Community
-    collection: community
+  - title: Citizen Engagement
+    collection: citizen-engagement
   - title: Resources
     collection: resources
   - title: Careers
