--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -2,6 +2,7 @@ collections:
   initiatives:
     output: true
     order:
+      - Transacting/.keep
       - Communicating/.keep
       - Artificial Intelligence/.keep
       - Artificial Intelligence/National AI Strategy.md
