{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Business & Finance/Networked Trade Platform.md
       - Business & Finance/SGFinDex.md
       - Business & Finance/SGTraDex.md
+      - Caring for One Another/GivingSG.md
       - Caring for One Another/.keep
       - Caring for One Another/Community Care Initiatives.md
       - Caring for One Another/KampungSpirit.md
