{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -52,7 +52,7 @@ collections:
       - Safeguarding Citizens/ScamShield.md
       - Safeguarding Citizens/SMS Sender ID Registry (SSIR).md
       - Sustainable Living/.keep
-      - Sustainable Living/Smart Urban Initiatives.md
+      - Sustainable Living/Smart City Projects.md
       - Sustainable Living/Dengue Hotspots Survey Drones.md
       - Sustainable Living/Drowning Detection System.md
       - Sustainable Living/Elderly Monitoring System.md
