{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -51,21 +51,21 @@ collections:
       - Safeguarding Citizens/Building Trust and Safety.md
       - Safeguarding Citizens/ScamShield.md
       - Safeguarding Citizens/SMS Sender ID Registry (SSIR).md
-      - Sustainable Living/.keep
-      - Sustainable Living/Smart City Projects.md
-      - Sustainable Living/Dengue Hotspots Survey Drones.md
-      - Sustainable Living/Drowning Detection System.md
-      - Sustainable Living/Elderly Monitoring System.md
-      - Sustainable Living/Electronic Payments.md
-      - Sustainable Living/HDB Smart Towns.md
-      - Sustainable Living/Integrated Environmental Modeller.md
-      - Sustainable Living/myENV App.md
-      - Sustainable Living/OneService App.md
-      - Sustainable Living/OneService Chatbot.md
-      - Sustainable Living/Personal Alert Button.md
-      - Sustainable Living/Punggol Smart Town.md
-      - Sustainable Living/Smart Water Meter.md
-      - Sustainable Living/Smart Urban Planning.md
+      - Smart City Solutions/.keep
+      - Smart City Solutions/Smart City Projects.md
+      - Smart City Solutions/Dengue Hotspots Survey Drones.md
+      - Smart City Solutions/Drowning Detection System.md
+      - Smart City Solutions/Elderly Monitoring System.md
+      - Smart City Solutions/Electronic Payments.md
+      - Smart City Solutions/HDB Smart Towns.md
+      - Smart City Solutions/Integrated Environmental Modeller.md
+      - Smart City Solutions/myENV App.md
+      - Smart City Solutions/OneService App.md
+      - Smart City Solutions/OneService Chatbot.md
+      - Smart City Solutions/Personal Alert Button.md
+      - Smart City Solutions/Punggol Smart Town.md
+      - Smart City Solutions/Smart Water Meter.md
+      - Smart City Solutions/Smart Urban Planning.md
       - Transacting/.keep
       - Covid 19/.keep
       - Covid 19/Responding to COVID 19 with Tech.md
