--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -66,6 +66,7 @@ collections:
       - Smart City Solutions/Punggol Smart Town.md
       - Smart City Solutions/Smart Water Meter.md
       - Smart City Solutions/Smart Urban Planning.md
+      - Transacting/Smart Transactions.md
       - Transacting/.keep
       - Covid 19/.keep
       - Covid 19/Responding to COVID 19 with Tech.md
