{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -46,6 +46,7 @@ collections:
       - Healthy Living/Project Pensieve.md
       - Healthy Living/Singapore Eye Lesion Analyser.md
       - Healthy Living/Telehealth.md
+      - Lifelong Learning/Learning with Technology.md
       - Lifelong Learning/.keep
       - Safeguarding Citizens/.keep
       - Safeguarding Citizens/Building Trust and Safety.md
