--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -45,6 +45,7 @@ collections:
       - Healthy Living/Project Pensieve.md
       - Healthy Living/Singapore Eye Lesion Analyser.md
       - Healthy Living/Telehealth.md
+      - Lifelong Learning/Parents Gateway.md
       - Lifelong Learning/Learning with Technology.md
       - Lifelong Learning/.keep
       - Safeguarding Citizens/.keep
