--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -46,7 +46,7 @@ collections:
       - Healthy Living/Singapore Eye Lesion Analyser.md
       - Healthy Living/Telehealth.md
       - Lifelong Learning/.keep
-      - Lifelong Learning/Learning with Technology.md
+      - Lifelong Learning/Tech For Education.md
       - Lifelong Learning/Student Learning Space.md
       - Lifelong Learning/Parents Gateway.md
       - Safeguarding Citizens/.keep
