{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -45,10 +45,10 @@ collections:
       - Healthy Living/Project Pensieve.md
       - Healthy Living/Singapore Eye Lesion Analyser.md
       - Healthy Living/Telehealth.md
-      - Lifelong Learning/.keep
-      - Lifelong Learning/Tech For Education.md
-      - Lifelong Learning/Student Learning Space.md
-      - Lifelong Learning/Parents Gateway.md
+      - Education/.keep
+      - Education/Tech For Education.md
+      - Education/Student Learning Space.md
+      - Education/Parents Gateway.md
       - Safeguarding Citizens/.keep
       - Safeguarding Citizens/Building Trust and Safety.md
       - Safeguarding Citizens/ScamShield.md
