{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -41,14 +41,14 @@ collections:
       - Government Services/SG Translate Together.md
       - Government Services/SG Govt Developer Portal.md
       - Government Services/Singpass.md
-      - Healthy Living/.keep
-      - Healthy Living/Smart Health Initiatives.md
-      - Healthy Living/Assistive Technology and Robotics In Healthcare.md
-      - Healthy Living/HealthHub.md
-      - Healthy Living/National Steps Challenge™ & Healthy 365 App.md
-      - Healthy Living/Project Pensieve.md
-      - Healthy Living/Singapore Eye Lesion Analyser.md
-      - Healthy Living/Telehealth.md
+      - Health/.keep
+      - Health/Smart Health Initiatives.md
+      - Health/Assistive Technology and Robotics In Healthcare.md
+      - Health/HealthHub.md
+      - Health/National Steps Challenge™ & Healthy 365 App.md
+      - Health/Project Pensieve.md
+      - Health/Singapore Eye Lesion Analyser.md
+      - Health/Telehealth.md
       - Safeguarding Citizens/.keep
       - Safeguarding Citizens/Building Trust and Safety.md
       - Safeguarding Citizens/ScamShield.md
