--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -14,10 +14,10 @@ collections:
       - Business & Finance/Networked Trade Platform.md
       - Business & Finance/SGFinDex.md
       - Business & Finance/SGTraDex.md
-      - Caring for One Another/.keep
-      - Caring for One Another/Community Care Initiatives.md
-      - Caring for One Another/GivingSG.md
-      - Caring for One Another/KampungSpirit.md
+      - Care and Support/.keep
+      - Care and Support/Community Care Initiatives.md
+      - Care and Support/GivingSG.md
+      - Care and Support/KampungSpirit.md
       - Commuting and Travel/.keep
       - Commuting and Travel/Smart Transport Initiatives.md
       - Commuting and Travel/Autonomous Vehicles.md
