{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -49,10 +49,10 @@ collections:
       - Health/Project Pensieve.md
       - Health/Singapore Eye Lesion Analyser.md
       - Health/Telehealth.md
-      - Safeguarding Citizens/.keep
-      - Safeguarding Citizens/Building Trust and Safety.md
-      - Safeguarding Citizens/ScamShield.md
-      - Safeguarding Citizens/SMS Sender ID Registry (SSIR).md
+      - Security and Protection/.keep
+      - Security and Protection/Building Trust and Safety.md
+      - Security and Protection/ScamShield.md
+      - Security and Protection/SMS Sender ID Registry (SSIR).md
       - Smart City Solutions/.keep
       - Smart City Solutions/Smart City Projects.md
       - Smart City Solutions/Dengue Hotspots Survey Drones.md
