{"message":"Update file: collection.yml","userId":"19","fileName":"collection.yml"}

--- a/_initiatives/collection.yml
+++ b/_initiatives/collection.yml
@@ -72,9 +72,9 @@ collections:
       - Transactions/Smart Transactions.md
       - Transactions/PayNow.md
       - Transactions/SGQR.md
-      - Covid 19/.keep
-      - Covid 19/Responding to COVID 19 with Tech.md
-      - Covid 19/Digital Contact Tracing.md
-      - Covid 19/Economic and Social Support.md
-      - Covid 19/Flow of Verified Information.md
-      - Covid 19/Community Preparedness.md
+      - Covid 19 Tech Solutions/.keep
+      - Covid 19 Tech Solutions/Responding to COVID 19 with Tech.md
+      - Covid 19 Tech Solutions/Digital Contact Tracing.md
+      - Covid 19 Tech Solutions/Economic and Social Support.md
+      - Covid 19 Tech Solutions/Flow of Verified Information.md
+      - Covid 19 Tech Solutions/Community Preparedness.md
